--- a/package.json
+++ b/package.json
@@ -16,13 +16,10 @@
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3",
-    "@tailwindcss/postcss": "^4",
+    "@tailwindcss/postcss": "^4.1.8",
     "@types/node": "22.15.29",
     "@types/react": "19.1.6",
-    "autoprefixer": "^10.4.21",
     "eslint": "^9",
-    "eslint-config-next": "15.3.3",
-    "postcss": "^8.5.4",
-    "tailwindcss": "^4.1.8"
+    "eslint-config-next": "15.3.3"
   }
 }
